# cse4059_final

./: .gitignore  CMakeLists.txt  analyze_results.py  dataset_generator.cpp  generate_graphs.py  profile_suite.sh  solution.cu
cmake/: SetRuntimeOutputDirectory.cmake
graphfiles/: data_edges.txt  data_edges1.txt  metadata.txt  metadata1.txt  queries1.txt
graphfiles/patterns/: pattern_house_5.txt
libgputk/: gputkPPM.cpp
profile_results/: _sanity_check.csv  ncu_version.txt  phase_a_02_er_n1k_d6_detailed.csv  phase_b_03_er_n2k_d8_detailed.csv  phase_c_01_motif_n300_basic.csv  phase_c_02_er_n1k_d6_basic.csv  phase_c_03_er_n2k_d8_basic.csv  phase_d_03_er_n2k_d8_path5_full.csv  phase_e_03_er_n2k_d8_roofline.csv  profile_manifest.txt
